# OpenSees-examples-Chinese

./: README.md
1.2-简单算例桁架/1.2简单算例桁架/: model.tcl
1.2简单算例桁架/1.2简单算例桁架/: elcentro.txt
1.4.1-弹性柱pushover/弹性柱受pushover/: model.tcl
1.4.1-弹性柱受到地震作用/: model.tcl
1.4.4-三维框架/三维框架/: tabasfn.txt
1.5-SSI/: model.tcl  stress_strain.m
1.9-Client-server/: client.tcl  disp.out  getTotalResistingForce.tcl  model.tcl  reaction.out  readme.txt
Client-server/: client.tcl  server.tcl
OpenSourceReliabilityAnalysisSoftware/: AdkZhangMeritFunctionCheck.cpp  AdkZhangMeritFunctionCheck.h  ArmijoRuleLog.txt  ArmijoStepSizeRule.cpp  ArmijoStepSizeRule.h  ArrayOfTaggedObjects.cpp  ArrayOfTaggedObjects.h  ArrayOfTaggedObjectsIter.cpp  ArrayOfTaggedObjectsIter.h  BJmatrix.cpp  BJmatrix.h  BJtensor.cpp  BasicGFunEvaluator.cpp  BasicGFunEvaluator.h  BetaRV.cpp  BetaRV.h  CMakeLists.txt  CStdLibRandGenerator.cpp  CStdLibRandGenerator.h  ChiSquareRV.cpp  ChiSquareRV.h  ConstantModulatingFunction.cpp  ConstantModulatingFunction.h  ConvergenceCheckLog.txt  CorrelationCoefficient.cpp  CorrelationCoefficient.h  CurvaturesBySearchAlgorithm.cpp  CurvaturesBySearchAlgorithm.h  DeltaFilter.cpp  DeltaFilter.h  DomainComponent.h  ExponentialRV.cpp  ExponentialRV.h  FORMAnalysis.cpp  FORMAnalysis.h  FORMoutput.out  FOSMAnalysis.cpp  FOSMAnalysis.h  Filter.cpp  Filter.h  (+203 more)
OpenSourceReliabilityAnalysisSoftware/User'sGuide/: User’s Guide of Open Source Reliability Analysis software (ORS).docx  ~$er’s Guide of Open Source Reliability Analysis software (ORS).docx
SSI/: model.tcl
砂土液化多单元/: model.tcl
(+27 files in other folders)
